set min width to components - prevent disappearing and setup overflow scroll

--- a/webui/src/app/globals.css
+++ b/webui/src/app/globals.css
@@ -74,15 +74,3 @@
       @apply bg-background text-foreground;
     }
   }
-
-  ::-webkit-scrollbar {
-    width: 0.5rem;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background-color: gray;
-  }
-
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: black;
-  }
